crates/solidity-v2/testing/snapshots/diagnostics_output/resolution/identifier_redeclaration/local_variable_disjoint_scope/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Identifier already declared.
    ╭─[input.sol:12:14]
    │
 12 │         uint x;
    │              ┬  
    │              ╰── Error occurred here.
────╯
